# tbconsult-mobile

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
assets/knowledge/: tb_knowledge.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/middleware/: rate_limit.py
backend/app/api/routes/: __init__.py  auth.py  health.py  triage.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/graph/: state.py  workflow.py
backend/app/graph/nodes/: generate.py  guardrail.py  nlu.py  red_flag.py  rerank.py  retrieval.py  web_search.py
backend/app/schemas/: api.py  nlu.py  triage.py
backend/app/services/: audit.py  cohere_rerank.py  llm.py  web_search.py
backend/scripts/: init-db.sh
backend/scripts/ingestion/: ingest.py
backend/scripts/ingestion/sources/: README.md  tb_guideline_sample.txt
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/safety/: test_adversarial.py
backend/tests/unit/: test_guardrail.py  test_red_flag.py
lib/: main.dart  outer_shell.dart
lib/core/di/: injection_container.dart
lib/core/error/: failures.dart
lib/core/network/: dio_client.dart
lib/core/theme/: app_colors.dart
lib/core/usecases/: usecase.dart
lib/features/auth/presentation/cubit/: auth_cubit.dart
(+56 files in other folders)
